22.03.0/packages/arm_cortex-a7_neon-vfpv4/luci/index.md
---
---

# [releases](/releases/) / [22.03.0](/releases/22.03.0/) / [packages](/releases/22.03.0/packages/) / [arm_cortex-a7_neon-vfpv4](/releases/22.03.0/packages/arm_cortex-a7_neon-vfpv4/) / luci


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 🗄️ [Packages](./Packages) | 8.0K | |
| 🗄️ [Packages.gz](./Packages.gz) | 4.0K | |
| 🗄️ [Packages.manifest](./Packages.manifest) | 12K | |
| 🗄️ [Packages.sig](./Packages.sig) | 4.0K | |
| 🗄️ [liblucihttp-lua_2022-02-13-cc851838-1_arm_cortex-a7_neon-vfpv4.ipk](./liblucihttp-lua_2022-02-13-cc851838-1_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [liblucihttp-lua_2022-07-08-6e68a106-1_arm_cortex-a7_neon-vfpv4.ipk](./liblucihttp-lua_2022-07-08-6e68a106-1_arm_cortex-a7_neon-vfpv4.ipk) | 4.0K | |
| 🗄️ [liblucihttp0_2022-02-13-cc851838-1_arm_cortex-a7_neon-vfpv4.ipk](./liblucihttp0_2022-02-13-cc851838-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [liblucihttp0_2022-07-08-6e68a106-1_arm_cortex-a7_neon-vfpv4.ipk](./liblucihttp0_2022-07-08-6e68a106-1_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [luci-app-firewall_git-22.089.67563-7e3c1b4_all.ipk](./luci-app-firewall_git-22.089.67563-7e3c1b4_all.ipk) | 16K | |
| 🗄️ [luci-app-opkg_git-22.154.41881-28e92e3_all.ipk](./luci-app-opkg_git-22.154.41881-28e92e3_all.ipk) | 12K | |
| 🗄️ [luci-base_git-22.140.66268-ef99568_arm_cortex-a7_neon-vfpv4.ipk](./luci-base_git-22.140.66268-ef99568_arm_cortex-a7_neon-vfpv4.ipk) | 132K | |
| 🗄️ [luci-base_git-22.204.42822-9a18337_arm_cortex-a7_neon-vfpv4.ipk](./luci-base_git-22.204.42822-9a18337_arm_cortex-a7_neon-vfpv4.ipk) | 132K | |
| 🗄️ [luci-lib-base_git-20.232.39649-1f6dc29_all.ipk](./luci-lib-base_git-20.232.39649-1f6dc29_all.ipk) | 16K | |
| 🗄️ [luci-lib-ip_git-20.250.76529-62505bd_arm_cortex-a7_neon-vfpv4.ipk](./luci-lib-ip_git-20.250.76529-62505bd_arm_cortex-a7_neon-vfpv4.ipk) | 12K | |
| 🗄️ [luci-lib-jsonc_git-22.097.61921-7513345_arm_cortex-a7_neon-vfpv4.ipk](./luci-lib-jsonc_git-22.097.61921-7513345_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |
| 🗄️ [luci-lib-nixio_git-20.234.06894-c4a4e43_arm_cortex-a7_neon-vfpv4.ipk](./luci-lib-nixio_git-20.234.06894-c4a4e43_arm_cortex-a7_neon-vfpv4.ipk) | 32K | |
| 🗄️ [luci-mod-admin-full_git-19.253.48496-3f93650_all.ipk](./luci-mod-admin-full_git-19.253.48496-3f93650_all.ipk) | 4.0K | |
| 🗄️ [luci-mod-network_git-22.140.66206-ec7cadc_all.ipk](./luci-mod-network_git-22.140.66206-ec7cadc_all.ipk) | 48K | |
| 🗄️ [luci-mod-network_git-22.193.51183-f19d41c_all.ipk](./luci-mod-network_git-22.193.51183-f19d41c_all.ipk) | 52K | |
| 🗄️ [luci-mod-status_git-22.140.66206-3886866_arm_cortex-a7_neon-vfpv4.ipk](./luci-mod-status_git-22.140.66206-3886866_arm_cortex-a7_neon-vfpv4.ipk) | 36K | |
| 🗄️ [luci-mod-status_git-22.189.48501-6731190_arm_cortex-a7_neon-vfpv4.ipk](./luci-mod-status_git-22.189.48501-6731190_arm_cortex-a7_neon-vfpv4.ipk) | 36K | |
| 🗄️ [luci-mod-system_git-22.140.66206-02913be_all.ipk](./luci-mod-system_git-22.140.66206-02913be_all.ipk) | 20K | |
| 🗄️ [luci-proto-ipv6_git-21.148.48881-79947af_all.ipk](./luci-proto-ipv6_git-21.148.48881-79947af_all.ipk) | 4.0K | |
| 🗄️ [luci-proto-ppp_git-21.158.38888-88b9d84_all.ipk](./luci-proto-ppp_git-21.158.38888-88b9d84_all.ipk) | 4.0K | |
| 🗄️ [luci-theme-bootstrap_git-22.141.59265-d8ecf48_all.ipk](./luci-theme-bootstrap_git-22.141.59265-d8ecf48_all.ipk) | 20K | |
| 🗄️ [luci_git-20.074.84698-ead5e81_all.ipk](./luci_git-20.074.84698-ead5e81_all.ipk) | 4.0K | |
| 🗄️ [rpcd-mod-luci_20210614_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-luci_20210614_arm_cortex-a7_neon-vfpv4.ipk) | 16K | |
| 🗄️ [rpcd-mod-rrdns_20170710_arm_cortex-a7_neon-vfpv4.ipk](./rpcd-mod-rrdns_20170710_arm_cortex-a7_neon-vfpv4.ipk) | 8.0K | |

